Minha estrutura inicial

--- a/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/index.html
+++ b/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/index.html
@@ -12,6 +12,7 @@
 
     <div class="botao">
         <a href="denuncia"><button>Faça aqui sua Denuncia</button></a>
+        <a href="{% url 'consultar' %}">Consulte sua denuncia</a>
     </div>
 </body>
 
