--- a/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/ver_denuncia.html
+++ b/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/ver_denuncia.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <h1>Listando suas denuncias</h1>
-    {% for proto in protocolo %}
-        <li>{{proto.titulo}}</li>
+    {% for denuncias in denuncia %}
+        <h1>Titulo: {{denuncias.titulo}}</h1>
+        <h2>Status: {{denuncias.status}}</h2>
+        {% if denuncias.responsavel %}
+            <h2>Responsavel:{{denuncias.responsavel.get_full_name|default:denuncias.responsavel.username}}</h2>
+        {% endif %}
+        <h2>Resposta: {{denuncias.resposta}}</h2>
     {% endfor %}
+        
 </body>
 </html>
