Adicionando app do responsavel já pegando para responder uma denuncia e mudar status

--- a/Projeto Denuncias/DenuncieJa/Responsavel/templates/responsavel/login.html
+++ b/Projeto Denuncias/DenuncieJa/Responsavel/templates/responsavel/login.html
@@ -7,14 +7,10 @@
 </head>
 <body>
     <form action="{% url 'login' %}" method="POST">{%csrf_token%}
-        <input type="text" placeholder="Username..." name="username">
-        <br>
-        <br>
-        <br>
-        <input type="password" placeholder="Senha..." name="senha" >
-        <br>
-        <br>
-        <input type="submit" value="login">
+        <table>
+            {{form.as_table}}
+        </table>
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
