--- a/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/consultar.html
+++ b/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/consultar.html
@@ -11,8 +11,10 @@
     </h1>
 
     <form action="{% url 'consultar' %}" method="get">
-        <label for="protocolo">Protocolo</label>
-        <input type="text" name="protocolo" id="protocolo" required>
+        {% csrf_token %}
+        <table>
+            {{form.as_table}}
+        </table>
         <input type="submit" value="Consultar">
     </form>
 </body>
