--- a/Projeto Denuncias/DenuncieJa/Responsavel/templates/responsavel/home.html
+++ b/Projeto Denuncias/DenuncieJa/Responsavel/templates/responsavel/home.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Bem vindo a sua página de resposta</h1>
+    <br>
+    <a href="{% url 'login'%}">Faça seu login</a>
 </body>
 </html>
