Adicionando novos campos na Class Denuncia

--- a/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/index.html
+++ b/Projeto Denuncias/DenuncieJa/Denuncias/templates/Denuncias/index.html
@@ -11,7 +11,7 @@
     <h1>Bem vindo a página de Denuncia</h1>
 
     <div class="botao">
-        <a href="denuncia"><button>Faça aqui sua Denuncia</button></a>
+        <a href="{% url 'denuncia' %}"><button>Faça aqui sua Denuncia</button></a>
         <a href="{% url 'consultar' %}">Consulte sua denuncia</a>
     </div>
 </body>
